--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "express": "^4.16.3",
     "mongodb": "^3.0.8",
     "mongoose": "^5.1.3"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
+    "supertest": "^3.1.0"
   }
 }
